<resources>
    <string name="app_name">Testing App</string>
    <string name="hello_world">Hello!</string>
    <string name="btn_text">Submit</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="Submit">Submit</string>
    <string name="Reset">Reset</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Welcome">Welcome User</string>
    <string name="tab1">Tab 1</string>
    <string name="tab2">Tab 2</string>
    <string name="tab3">Tab 3</string>
    <string name="WFC">Wells Fargo Checking</string>
    <string name="BS">Bank Summary</string>
    <string name="WFS">Wells Fargo Saving</string>
    <string name="CC">Chase Checking</string>
    <string name="FBC">First Bank Checking</string>
    <string name="FBS">First Bank Saving</string>
    <string name="SignIn">Sign In</string>
    <string name="Dollar">$</string>
    <string name="Cash">Cash</string>
    <string name="Total">Total Amount</string>
    <string name="err_amount_empty">Please enter amount</string>
    <string name="err_amount">Please enter valid amount</string>
    <string name="Credit">Credit Card</string>
    <string name="DiscoverCredit">Discover Credit Card</string>
</resources>
