<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BS"
        android:textSize="30sp"
        android:gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilWFC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/WFCValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/WFC"
            android:inputType="numberDecimal"
            android:digits="0123456789." />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilWFS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/WFSValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/WFS"
            android:inputType="numberDecimal"
            android:digits="0123456789." />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilCC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/CCValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CC"
            android:inputType="numberDecimal"
            android:digits="0123456789." />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilFBC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/FBCValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/FBC"
            android:inputType="numberDecimal"
            android:digits="0123456789." />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilFBS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/FBSValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/FBS"
            android:inputType="numberDecimal"
            android:digits="0123456789." />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilCash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/CashValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Cash"
            android:inputType="numberDecimal"
            android:digits="0123456789." />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Submit" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reset" />

    <TextView
        android:id="@+id/TotalValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

</LinearLayout>
