<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Credit"
        android:textSize="30sp"
        android:gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/CreditValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/DiscoverCredit"
            android:inputType="numberDecimal"
            android:digits="0123456789." />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Submit" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reset" />

    <TextView
        android:id="@+id/TextCreditCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

</LinearLayout>
